--- a/src/app/user/create-password/create-password.component.html
+++ b/src/app/user/create-password/create-password.component.html
@@ -4,7 +4,7 @@
   <input type="password" placeholder="Password" formControlName="password">
   <input type="password" placeholder="Confirm password" formControlName="confirmPassword">
   <div class="buttons-container">
-    <button class="button button--fat button--upper" type="submit" [disabled]="passwordForm.untouched && passwordForm.controls['password'].value !== '' && passwordForm.controls['confirmPassword'].value !== ''">Log in</button>
+    <button class="button button--fat button--upper button--primary" type="submit" [disabled]="passwordForm.untouched && passwordForm.controls['password'].value !== '' && passwordForm.controls['confirmPassword'].value !== ''">Log in</button>
   </div>
   <p class="error-message" *ngIf="passwordForm.errors && passwordForm.errors.invalidConfirmPassword && loginType">Passwords do not match</p>
   <p *ngIf="passwordForm.controls['password'].invalid && passwordForm.controls['password'].touched && passwordForm.controls['password'].value !== '' && loginType" class="error-message">
