--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,7 @@
 <div class="auth">
         <div class="auth-col auth-col--light">
-            <div class="text-right" routerLink="login">
-                <div class="button button--primary button--upper">
+            <div class="text-right">
+                <div class="button button--primary button--upper" routerLink="login">
                     <span>Log in</span>
                 </div>
             </div>
