--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -4,7 +4,7 @@
   <input type="text" placeholder="Email" formControlName="email">
   <input type="password" placeholder="Password" formControlName="password">
   <div class="buttons-container">
-    <button class="button button--fat button--upper" type="submit" [disabled]="loginForm.untouched && loginForm.controls['email'].value == '' && loginForm.controls['password'].value == ''">Log in</button>
+    <button class="button button--fat button--upper button--primary" type="submit" [disabled]="loginForm.untouched && loginForm.controls['email'].value == '' && loginForm.controls['password'].value == ''">Log in</button>
     <a [routerLink]="['/auth/create-password']">Forgot your password?</a>
   </div>
   <p *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched && loginForm.controls['email'].value !== '' && loginType" class="error-message">Email type is not correct</p>
