--- a/src/app/wallet/settings/settings.component.scss
+++ b/src/app/wallet/settings/settings.component.scss
@@ -63,30 +63,15 @@ h2 {
 	}
 }
 
-.alert-container {
-	display: flex;
-	align-items: center;
-	margin: 60px 0;
-
-	img {
-		flex: 0 0 18px;
-		height: 18px;
-	}
-
-	p {
-		font-size: 16px;
-		line-height: 19px;
-		color: #3C466C;
-		margin-left: 18px;
-	}
-}
-
 .security {
 	&__item {
 		display: flex;
 		align-items: center;
-		margin: 0 0 40px;
 		width: 100%;
+
+		&:not(:last-child) {
+			margin: 0 0 40px;
+		}
 
 		&__name {
 			max-width: 210px;
@@ -94,6 +79,14 @@ h2 {
 			font-size: 20px;
 			line-height: 24px;
 			color: #1F2742;
+
+			span {
+				vertical-align: middle;
+			}
+			img {
+				margin: 2px 0 0 8px;
+				vertical-align: middle;
+			}
 		}
 
 		&__inner {
@@ -155,6 +148,8 @@ h2 {
 						display: inline-flex;
 						align-items: center;
 						justify-content: center;
+
+						img { cursor: pointer; }
 					}
 				}
 			}
