--- a/src/app/wallet/wallet/wallet.component.scss
+++ b/src/app/wallet/wallet/wallet.component.scss
@@ -45,7 +45,7 @@
 		font-size: 0;
 		display: inline-block;
 		width: 4px;
-		padding: 0 8px;
+		padding: 0 12px;
 
 		span {
 			display: inline-block;
@@ -150,9 +150,13 @@
 	@media (max-width: 576px) {
 		&__inner {
 			justify-content: center;
+			flex-direction: column;
+    	text-align: center;
+    	text-align: center;
 		}
 		&__name {
-			display: none;
+			margin-top: 12px;
+			//display: none;
 		}
 	}
 }
