--- a/src/styles.scss
+++ b/src/styles.scss
@@ -92,6 +92,18 @@ input[type="email"] {
 	}
 }
 
+textarea {
+	font: 16px/19px 'Lato', sans-serif;
+	border-radius: 8px;
+	padding: 16px 23px;
+	min-height: 90px;
+	outline: none;
+	transition: 300ms;
+	color: #1F2742;
+	border: 1px solid rgba(#323044, .5);
+	resize: none;
+}
+
 .input-wrapper {
 	position: relative;
 	display: flex;
