--- a/src/app/core/recovery-phrase/recovery-phrase.component.html
+++ b/src/app/core/recovery-phrase/recovery-phrase.component.html
@@ -17,12 +17,12 @@
 	<b>Your recovery phrase is the only way to reset your web wallet password.</b>
 
 	<div class="recovery-phrase">
-		derater liang youl puggish biltong sebilla sleechy lechery venust foreran hattock aniline snooper compole topic cremor
+		{{brainKey}}
 	</div>
 
 	<p class="recovery-phrase-text">In the next step, you will need to enter four words from the recovery phrase in a random order.</p>
 
 	<div class="buttons text-right">
-		<button class="button button--primary button--upper">Next</button>
+		<button class="button button--primary button--upper" (click)="next()">Next</button>
 	</div>
 </div>
