--- a/src/app/wallet/wallet-inner/wallet-inner.component.html
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.html
@@ -7,7 +7,7 @@
 		</div>
 		<p class="description">Your address can also be known as you <b>public key</b>. It is what you share with people so they can send you tokens.</p>
 	</div>
-	<img src="https://chart.googleapis.com/chart?chs=138x138&cht=qr&chl=http%3A%2F%2Flocalhost%3A4200%2Fuser&choe=UTF-8&chld=M|0" alt="">
+	<img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl={{address}}&choe=UTF-8&chld=L|1" alt="">
 </div>
 <div class="transfer-section">
 	<h2>Transfer {{token == 'eveg'?  'EVEG' : 'EVEO'}}</h2>
