--- a/src/app/wallet/settings/settings.component.html
+++ b/src/app/wallet/settings/settings.component.html
@@ -3,8 +3,8 @@
 
 	<div class="security-level">
 		<div class="security-level__step security-level__step--done"></div>
-		<div class="security-level__step"></div>
-		<div class="security-level__step"></div>
+		<div class="security-level__step" [ngClass]="{'security-level__step--done':account.privateKeySaved || account.brainKeySaved}"></div>
+		<div class="security-level__step" [ngClass]="{'security-level__step--done':account.privateKeySaved && account.brainKeySaved}"></div>
 	</div>
 </div>
 
@@ -16,7 +16,7 @@
 <div class="security">
 	<div class="security__item">
 		<h3 class="security__item__name">Email:</h3>
-		<div class="security__item__inner security__item__inner--email">sarkis@arattauna.com</div>
+		<div class="security__item__inner security__item__inner--email">{{account.email}}</div>
 		<div class="security__item__status">
 			<div class="icon-done"></div>
 		</div>
@@ -28,8 +28,8 @@
 		</h3>
 		<div class="security__item__inner security__item__inner--address">
 			<div>
-				<span>0x6VTswksF9F4tERp1QHVB4Rgj5ik1HvP8vMauUomPfe3EB3T6rw</span>
-				<img src="assets/images/copy.svg">
+				<span>{{account.address}}</span>
+				<img (click)="copy()" src="assets/images/copy.svg">
 			</div>
 		</div>
 	</div>
@@ -46,9 +46,9 @@
 				</div>
 				<div class="input-wrapper__shadow"></div>
 			</div>
-			<button class="button button--primary button--upper" (click)="backupPrivateKey()">Backup</button>
+			<button class="button button--primary button--upper" *ngIf="!account.privateKeySaved" (click)="backupPrivateKey()">Backup</button>
 		</div>
-		<div class="security__item__status">
+		<div class="security__item__status" *ngIf="account.privateKeySaved">
 			<div class="icon-done"></div>
 		</div>
 	</div>
@@ -65,9 +65,9 @@
 				</div>
 				<div class="input-wrapper__shadow"></div>
 			</div>
-			<button class="button button--primary button--upper" (click)="backupRecoveryPhrase()">Backup</button>
+			<button class="button button--primary button--upper" *ngIf="!account.brainKeySaved" (click)="backupRecoveryPhrase()">Backup</button>
 		</div>
-		<div class="security__item__status">
+		<div class="security__item__status" *ngIf="account.brainKeySaved">
 			<div class="icon-done"></div>
 		</div>
 	</div>
