page not found added, merged

--- a/src/app/shared/page-not-found/page-not-found.component.html
+++ b/src/app/shared/page-not-found/page-not-found.component.html
@@ -1,5 +1,11 @@
-<div class="wrap">
-    <img src="../../../assets/404.svg">
-    <h1>{{'shared.page_not_found' | translate}}</h1>
-    <a class="button" href="/">{{'shared.back_to_home' | translate}}</a>
+<div class="page-not-found">
+	<div>
+		<h3>Oops!</h3>
+		<p class="doesnt-exist">The page you are looking for doesn’t exist</p>
+		<h2>404</h2>
+		<div class="error-404">Error 404: Page not found</div>
+		<div class="button button--primary button--fat" routerLink="/">
+			<span>Go back home</span>
+		</div>
+	</div>
 </div>
