--- a/src/app/shared/page-not-found/page-not-found.component.scss
+++ b/src/app/shared/page-not-found/page-not-found.component.scss
@@ -1,55 +1,63 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic-ext,cyrillic);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400&subset=latin,cyrillic-ext);
-//body,html { padding:0; margin:0; font-family:Open Sans; }
+@import url('https://fonts.googleapis.com/css?family=Lato:900');
 
-.wrap {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 40px;
-  margin: auto;
-  max-width: 1160px;
+.page-not-found {
+  width: 100%; min-height: 100vh;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-}
-.wrap img {
-  width: 220px;
-  margin: auto;
-  display: block;
-}
-.wrap h1 {
-  text-align: center;
-  font-family: "Open Sans", sans-serif;
-  font-size: 36px;
-  font-weight: 300;
-  margin-top: 30px;
-}
-.wrap p {
-  text-align: center;
-  font-size: 16px;
-  font-weight: 400;
-}
-.button {
-  padding: 10px 20px;
-  border: 1px solid #3366ff;
-  background: none;
-  display: inline-block;
-  color: #3366ff;
-  text-decoration: none;
-  font-family: Roboto Condensed;
-  font-weight: 700;
-  font-size: 12px;
-  text-transform: uppercase;
-  margin-top: 20px;
-  width: 150px;
-  text-align: center;
-  cursor: pointer;
-}
+  background-image: linear-gradient(135deg, #191925 0%, #122042 100%);
+  padding: 15px;
+  color: #ffffff;
+  display: table;
+  user-select: none;
 
-.button:hover {
-  background: #3366ff;
-  color: #fff !important;
+  & > div {
+    display: table-cell;
+    vertical-align: middle;
+  }
+
+  h3 {
+    font-size: 53px;
+    line-height: 62px;
+  }
+
+  .doesnt-exist {
+    color: #A0B4E0;
+    margin: 8px 0 3px;
+  }
+
+  h2 {
+    font-weight: 900;
+    font-size: 300px;
+    line-height: 360px;
+  }
+
+  .error-404 {
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 7px;
+    text-transform: uppercase;
+    color: #495E8C;
+    margin: 0 0 70px;
+  }
+
+  .button {
+    border-radius: 30px;
+  }
+
+  @media (max-width: 768px) {
+    h3 {
+      font-size: 36px;
+      line-height: 42px;
+    }
+    .doesnt-exist {
+      margin: 8px 0 24px;
+    }
+    h2 {
+      font-size: 120px;
+      line-height: 120px;
+    }
+    .error-404 {
+      letter-spacing: 3px;
+      margin: 0 0 36px;
+    }
+  }
 }
