--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -17,25 +17,49 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
-			padding: 70px 80px 70px;
+			padding: 70px 80px 40px;
 			left: 0;
 
 			h1 {
-				font-size: 64px;
+				font-size: 100px;
+				line-height: 1;
 				font-weight: normal;
 				color: #ffffff;
+				margin: 36px 0 0;
 
-				b {
-					display: block;
-					font-weight: bold;
+			}
+
+			.logos {
+				img {
+					display: inline-block;
+					width: 110px;
+
+					&:not(:last-child) {
+						margin: 0 24px 0 0;
+					}
 				}
 			}
 
 			img {
 				width: 80%;
+				max-width: 360px;
 				margin-top: 20px;
+			}
 
-				@media (max-height: 780px) {
+			@media (max-height: 780px) {
+				.logos img {
+					width: 82px;
+					&:not(:last-child) {
+						margin: 0 12px 0 0;
+					}
+				}
+
+				h1 {
+					font-size: 82px;
+					margin: 24px 0 0;
+				}
+
+				img {
 					max-width: 320px;
 				}
 			}
@@ -47,8 +71,10 @@
 		}
 
 		&__inner {
+			display: block;
 			max-width: 400px;
 			margin: 15vh auto 0;
+			padding-top: .05px;
 		}
 	}
 }
