--- a/src/app/core/recovery-phrase/recovery-phrase.component.html
+++ b/src/app/core/recovery-phrase/recovery-phrase.component.html
@@ -1,3 +1,5 @@
+<div class="icon-close"></div>
+
 <div *ngIf="false">
 	<h2>Backup Recovery Phrase</h2>
 	<p class="description">Enter your password to backup your Recovery Phrase.</p>
