--- a/src/app/user/create-password/create-password.component.html
+++ b/src/app/user/create-password/create-password.component.html
@@ -1,4 +1,4 @@
-<div class="vh-centered" *ngIf="loading">
+<div class="sat-loading" *ngIf="loading">
   <mat-spinner></mat-spinner>
 </div>
 <div *ngIf="!loading">
