--- a/src/app/wallet/settings/settings.component.html
+++ b/src/app/wallet/settings/settings.component.html
@@ -40,7 +40,7 @@
 		</h3>
 		<div class="security__item__inner security__item__inner--private-key">
 			<div class="input-wrapper">
-				<input type="password" readonly value="private key here">
+				<input type="password" readonly value="your private key could be here but it wouldn't make sense">
 				<div class="input-wrapper__suffix" (click)="backupPrivateKey(false)">
 					<img src="assets/images/eye.svg"/>
 				</div>
@@ -59,7 +59,7 @@
 		</h3>
 		<div class="security__item__inner security__item__inner--private-key">
 			<div class="input-wrapper">
-				<input type="password" readonly value="private key here">
+				<input type="password" readonly value="your recovery phrase could be here but it wouldn't make sense">
 				<div class="input-wrapper__suffix" (click)="backupRecoveryPhrase(false)">
 					<img src="assets/images/eye.svg"/>
 				</div>
