--- a/src/app/wallet/wallet-inner/wallet-inner.component.scss
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.scss
@@ -59,6 +59,14 @@ p.description {
 			cursor: pointer;
 		}
 	}
+
+	@media (max-width: 767px) {
+		flex-direction: column-reverse;
+
+		img {
+			margin-left: -15px;
+		}
+	}
 }
 
 .transfer-section {
