--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,7 +33,8 @@ a {
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	position: absolute;
-	top: 20px; right: 20px;
+	top: 24px; right: 24px;
+	cursor: pointer;
 }
 
 .text-left {text-align: left;}
@@ -50,6 +51,7 @@ a {
 	text-align: center;
 	border-radius: 8px;
 	color: #607BED;
+	background-color: #ffffff;
 	cursor: pointer;
 	border: 1px solid #607BED;
 	outline: 0;
@@ -168,7 +170,7 @@ textarea {
 	padding: 50px 80px;
 	border-radius: 20px;
 
-	@media (max-width: 768px) {
+	@media (max-width: 767px) {
 		padding: 32px;
 	} 
 }
