--- a/src/app/core/confirm-transaction/confirm-transaction.component.html
+++ b/src/app/core/confirm-transaction/confirm-transaction.component.html
@@ -18,5 +18,5 @@
 
 <div class="buttons">
 	<button class="button button--primary">Confirm</button>
-	<button class="button">Cancel</button>
+	<button class="button" (click)="close()">Cancel</button>
 </div>
