--- a/src/app/wallet/settings/settings.component.scss
+++ b/src/app/wallet/settings/settings.component.scss
@@ -27,6 +27,10 @@ h2 {
 	align-items: center;
 }
 
+.alert-container {
+	margin: 40px 0;
+}
+
 .security-level {
 	position: relative;
 	white-space: nowrap;
