--- a/src/app/core/really-postpone/really-postpone.component.html
+++ b/src/app/core/really-postpone/really-postpone.component.html
@@ -6,6 +6,6 @@
 </div>
 
 <div class="buttons">
-	<button class="button button--primary button--fat">Yes</button>
-	<button class="button button--primary button--fat">No</button>
+	<button class="button button--primary button--fat" (click)="close(false)">Yes</button>
+	<button class="button button--primary button--fat" (click)="close(true)">No</button>
 </div>
