--- a/src/app/wallet/wallet-inner/wallet-inner.component.scss
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.scss
@@ -110,6 +110,13 @@ p.description {
 	border-bottom: 1.5px dashed #9e9e9e;
 }
 
+input[type="text"],
+input[type="number"] {
+	& + .error-message {
+		margin: -15px 0 15px;
+	}
+}
+
 .history-section {
 	.transaction {
 		margin-top: 16px;
