--- a/src/app/core/confirm-transaction/confirm-transaction.component.scss
+++ b/src/app/core/confirm-transaction/confirm-transaction.component.scss
@@ -2,7 +2,6 @@ h2 {
 	font-size: 24px;
 	line-height: 30px;
 	text-transform: uppercase;
-	text-align: center;
 	margin: 0 0 12px;
 }
 
@@ -10,8 +9,7 @@ p.description {
 	font-size: 14px;
 	line-height: 17px;
 	color: #8A8FA5;
-	text-align: center;
-	margin: 0 0 40px;
+	margin: 0 0 24px;
 }
 
 table {
@@ -23,6 +21,7 @@ table {
 	}
 
 	td:first-child {
+		text-align: left;
 		vertical-align: top;
 		color: #1E2741;
 	}
@@ -55,8 +54,7 @@ table {
 .fee { color: #38446D; }
 
 .buttons {
-	text-align: center;
-	margin: 50px 0 0;
+	margin: 24px 0 0;
 	
 	.button--primary {
 		margin-right: 36px;
@@ -64,5 +62,21 @@ table {
 
 	@media (max-width: 767px) {
 		margin: 24px 0 0;
+	}
+}
+
+.error-message {
+	margin: 16px 0 0;
+}
+
+.review-part {
+	text-align: center;
+
+	p.description {
+		margin: 0 0 40px;
+	}
+
+	.buttons {
+		margin: 50px 0 0;
 	}
 }
