--- a/src/app/wallet/wallet-inner/wallet-inner.component.html
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.html
@@ -21,7 +21,10 @@
 	<label>Recepient address</label>
 	<input type="text" placeholder="Enter address" formControlName="address">
 	<p class="error-message" *ngIf="transferForm.controls['address'].errors && transferForm.controls['address'].errors.invalidAddress">Invalid address</p>
-	<label class="transaction-fee">Gas price <input type="number" formControlName="gasPrice"> Gwei</label>
+
+	<label class="transaction-fee">Gas price</label>
+	<input type="number" formControlName="gasPrice">
+	
 	<button class="button button--primary button--upper" [disabled]="transferForm.invalid" (click)="generateTransaction()">Generate transaction</button>
 </div>	
 </form>
