--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -35,4 +35,9 @@
 
 <p class="error-message" *ngIf="emailControl.value !=='' && emailType">{{'error.invalid_email' | translate}}</p>
 <p class="error-message" *ngIf="errorMessage">{{errorMessage | translate}}</p>
+
+	<div class="share-app">
+		<img src="assets/images/AppStore.svg" alt="">
+		<img src="assets/images/GooglePlay.svg" alt="">
+	</div>
 </div>
