--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -15,8 +15,8 @@
         </div>
         <div class="auth-col auth-col--dark">
             <div class="logos">
-                <img src="assets/images/eveg.svg"/>
-                <img src="assets/images/eveo.svg"/>
+                <img src="assets/images/eveg@2x.svg"/>
+                <img src="assets/images/eveo@2x.svg"/>
                 <h1>Wallet</h1>
             </div>
             <img src="assets/images/{{title === 'reset-password' ? 'reset' : 'login'}}-illustration.svg" alt="">
