--- a/src/app/user/register/register.component.scss
+++ b/src/app/user/register/register.component.scss
@@ -1,19 +1,28 @@
 h2 {
 	text-transform: uppercase;
 	color: #1F2742;
-	margin: 0 0 27px;
+	margin: 0 0 4px;
 }
 
 .descr {
 	color: #8A8FA5;
-	margin: 0 0 27px;
+	margin: 0 0 36px;
 }
 
 input {
 	width: 100%;
 	margin: 0 0 20px 0;
 }
-
+.share-app{
+	margin-top: 56px;
+	img{
+		display: inline-block;
+		height: 40px;
+		&:not(:last-child){
+			margin-right: 24px;
+		}
+	}
+}
 .buttons-container {
 	display: flex;
 	align-items: center;
