--- a/src/app/wallet/wallet-inner/wallet-inner.component.scss
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.scss
@@ -2,7 +2,7 @@ h2 {
 	text-transform: uppercase;
 	font-size: 24px;
 	line-height: 29px;
-	margin: 0 0 16px;
+	margin: 0 0 4px;
 	color: #1F2742;
 }
 
@@ -11,29 +11,50 @@ p.description {
 	font-size: 16px;
 	line-height: 18px;
 }
+.form-fields{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 25px;
+	>div{
+		flex: 0 0 49%;
+	}
+	.coin-field input{
+		margin-bottom: 0;
+	}
+	@media screen and (max-width: 767px){
+		flex-direction: column;
+		align-items: normal;
+	}
 
+}
 .receive-section {
 	width: 100%;
 	display: inline-flex;
-	margin: 0 0 50px;
+	margin: 0 0 20px;
 
 	> div {
 		flex: 1;
 	}
 
 	img {
-		width: 142px;
-		height: 142px;
-		margin-left: 60px;
+		width: 180px;
+		height: 180px;
+		margin-left: 42px;
 
 		@media (max-width: 767px) {
-			margin-left: 25px;
+			margin: 0 auto;
 		}
 	}
-
-	p.description {
+	.description{
+		margin-bottom: 30px;
+	}
+	.address-label{
+		display: block;
 		font-size: 14px;
 		line-height: 17px;
+		color: #38446D;
+		margin: 0 0 8px;
 	}
 
 	.public-key-wrapper {
@@ -41,31 +62,28 @@ p.description {
 		width: 100%;
 		border-radius: 8px;
 		border: 1px solid rgba(50, 48, 68, 0.5);
-		margin: 24px 0;
+		margin:0 0 24px;
 
 		.public-key {
 			font: 16px/19px 'Lato', sans-serif;
-			color: #8A8FA5;
 			word-break: break-all;
-			padding: 14px 16px;
 			width: calc(100% - 32px);
+
+			min-height: 36px;
+			padding: 7px 6px 6px 10px;
 		}
 
 		img {
 			width: 25px;
 			height: 25px;
 			position: absolute;
-			bottom: 10px; right: 10px;
+			bottom: 5px; right: 10px;
 			cursor: pointer;
 		}
 	}
 
 	@media (max-width: 767px) {
-		flex-direction: column-reverse;
-
-		img {
-			margin-left: -15px;
-		}
+		flex-direction: column;
 	}
 }
 
@@ -85,39 +103,63 @@ p.description {
 	input {
 		width: 100%;
 		margin: 0 0 25px;
-		padding: 14px 16px;
+		min-height: 36px;
+		border: 1px solid rgba(50, 48, 68, 0.5);
+		border-radius: 8px;
+		padding: 5px 6px 5px 10px;
 	}
 
 	.transaction-fee {
+		display: flex;
+		align-items: center;
+		>div{
+			flex: 0 0 44%;
+			min-width: 170px;
+			@media screen and (max-width: 767px){
+				flex: none;
+			}
+			}
 		label {
 			display: inline-block;
+			font-size: 16px;
 		}
 
 		input {
-			height: 32px;
-			max-width: 64px;
+			height: auto;
+			min-height: 22px;
+			max-width: 30px;
 			border: none;
 			border-radius: 0;
 			padding: 0;
 			color: #607BED;
 			border-bottom: 1px dashed #607BED;
-			margin: 0 12px;
+			margin: 0 6px 0 12px;
 		}
 
 		mat-slider {
+			//flex: 0 0 55%;
 			width: 100%;
 			max-width: 320px;
+			.mat-slider-horizontal{
+				height: 36px;
+			}
 		}
 
 		span {
 			margin-right: 15px;
 			color: #8A8FA5;
 		}
+		@media screen and (max-width: 767px){
+			margin-top: 10px;
+		}
 	}
 
 	button {
 		padding: 13px 32px;
 		margin-top: 20px;
+		@media screen and (max-width: 767px) {
+			width: 100%;
+		}
 	}
 }
 
@@ -127,7 +169,11 @@ p.description {
 
 .hline {
 	margin: 40px 0 60px;
-	border-bottom: 1.5px dashed #9e9e9e;
+	border-bottom: 2px dashed #9e9e9e;
+	&.first{
+		margin-top: 0;
+		border-bottom: 1.5px dashed #9e9e9e;
+	}
 }
 
 input[type="text"],
