--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,10 @@ a {
 	position: absolute;
 	top: 24px; right: 24px;
 	cursor: pointer;
+	@media screen and (max-width: 767px){
+		top: 12px;
+		right: 12px;
+	}
 }
 
 .text-left {text-align: left;}
@@ -167,11 +171,15 @@ textarea {
 
 .wallet-dialog .mat-dialog-container {
 	position: relative;
-	padding: 50px 80px;
+	padding: 50px 60px;
 	border-radius: 20px;
+	max-width: 60%;
+	margin: 0 auto;
+	width: auto;
 
 	@media (max-width: 767px) {
 		padding: 32px;
+		max-width: 100%;
 	} 
 }
 
